--- a/css.css
+++ b/css.css
@@ -3,41 +3,22 @@ body{
     font-family:sans-serif;
     color: rgb(204, 204, 204);
     background-color: rgb(48, 48, 48);
-    height: 100%;
+    height: 0;
+    padding-bottom: 20%;
     width: 100%;
     align-content: center;
     
 }
 .bigBox{
     position: absolute;
-    top:45%;
-    left: 45%;
-    transform: translate(-45%, -45%);
     align-self: center;
-    height: 350px;
-    width: 350px;
     border: 1px solid rgb(204, 204, 204);
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction:row;
-    align-items:baseline;
 }
 .storBox{
     border: 1px solid rgb(204, 204, 204);
-    height: 32.9%;
-    width: 32.72%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction:row;
-    align-items:baseline;
 }
 .litenBox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border: 1px solid rgb(204, 204, 204);
-    height: 31.6%;
-    width: 31.59%;
     text-align:center;
     font-family: Arial, Helvetica, sans-serif;
 }
