--- a/css/MainPage.css
+++ b/css/MainPage.css
@@ -1,35 +1,108 @@
-.TopNav {
-    position: relative;
-    left: -1;
-    right: -1;
-    width: 100%;
-    height: 50px; /* Adjust as needed */
+.LeftNav {
+    visibility:collapse;
+    position: absolute;
+    width: 10%;
+    height: 100%; 
+    top: 0;
+    left: 0;
     display: flex;
-    flex-direction: row; /* Ensure this is set to row for horizontal alignment */
-    justify-content: center;
-    align-items: center; /* Center align items vertically */
-    background-color: mediumorchid;
+    flex-direction: column; 
+    justify-content: left;
+    align-items: top; 
+    padding: 0;
+
+    background: rgba(0, 0, 0, 0.3);
+    
+    
 }
 body
 {
-    margin: 0;
-    padding: 0;
-}
-.Links
-{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+    background: radial-gradient(circle, #6b6b7b, #6f6f80);
+    background-size: cover;
 }
 
+
 .BannerButton {
-    border: 1px solid black;
+    border: none;
     padding: 10px;
     margin: 5px;
     transition: background-color 0.3s;
-    flex-shrink: 0; /* Prevent buttons from shrinking */
+    flex-shrink: 0; 
+}
+a{
+    text-emphasis: none;
+    color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
 }
 .BannerButton:hover
 {
-    background-color: orchid;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+.centerIsland
+{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin: 0;
+    width: 50%;
+    height: 25%;
+    padding: 2em;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.3);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+h1{
+    overflow: hidden;
+    white-space: nowrap;
+    color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 700%;
+    font-weight: bold;
+    border-right: .15em solid #e3b9d2 ;
+    opacity: 1;
+
+
+    animation: typing 1s steps(12, end) forwards,rmCurser 0s 1.5s forwards;
+}
+
+.hamburger
+{
+    visibility: visible;
+    border: none;
+    margin: 10px;
+}
+
+.bar {
+    width: 35px;
+    height: 5px;
+    margin: 6px 0 ;
+    background-color: white;
+    border-radius: 5px;
+} 
+
+.change .bar2 {
+    opacity: 0;
+}
+.change .bar1{
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+@keyframes typing
+{
+    from {
+        width: 0;
+    }
+    to{
+        width: 100%;
+    }
+}
+@keyframes rmCurser
+{
+    100%
+    {
+        border-right: none;
+    }
 }
